Update content links title

--- a/src/content/bitcoin/core.mdx
+++ b/src/content/bitcoin/core.mdx
@@ -17,9 +17,9 @@ Bitcoin, como todo software OpenSource, tiene su **código fuente, característi
 
 ## Qué es Bitcoin Core
 
-Bitcoin es un software OpenSource que al día de hoy posee [cerca de 900 contribuyentes](https://github.com/bitcoin/bitcoin/graphs/contributors) de todas partes del mundo que aportan su conocimiento en el proyecto y en las tecnologías que utiliza, como C/C++ y Python, para que el mismo continúe creciendo a partir de las propuestas.
+Bitcoin es un software OpenSource que al día de hoy posee [cerca de 900 contribuyentes](https://github.com/bitcoin/bitcoin/graphs/contributors "Cerca de 900 contribuyentes") de todas partes del mundo que aportan su conocimiento en el proyecto y en las tecnologías que utiliza, como C/C++ y Python, para que el mismo continúe creciendo a partir de las propuestas.
 
-Uno de los clientes de Bitcoin más populares es **Bitcoin Core**. No deja de ser un [repositorio en GitHub](https://github.com/bitcoin/bitcoin) que deriva del código fuente original que Satoshi Nakamoto entregó a mediados del 2011 para que la comunidad de desarrolladores continuaran con el proyecto.
+Uno de los clientes de Bitcoin más populares es **Bitcoin Core**. No deja de ser un [repositorio en GitHub](https://github.com/bitcoin/bitcoin "Repositorio de Bitcoin en GitHub") que deriva del código fuente original que Satoshi Nakamoto entregó a mediados del 2011 para que la comunidad de desarrolladores continuaran con el proyecto.
 
 ## El código fuente de Bitcoin
 
@@ -65,7 +65,7 @@ Esta interfaz está en desuso. Al tener RPC/HTTP, podemos verlo como un backend 
 
 Las siglas MQ hacen referencia a **servicios de mensajería y de entrega de notificaciones** o push notificación. Este tipo de servicios se usan mucho en aplicaciones móviles para notificar con información sobre su cuenta.
 
-ZMQ o [ZeroMQ](https://zeromq.org/) es el servicio que utiliza Bitcoin Core para el **envío de notificaciones a los clientes** a través de sockets. Múltiples clientes pueden conectarse a un socket para ser notificados cuando se crea un nuevo bloque, una transacción u ocurre un determinado evento en la Blockchain para actuar en consecuencia.
+ZMQ o [ZeroMQ](https://zeromq.org/ "ZeroMQ") es el servicio que utiliza Bitcoin Core para el **envío de notificaciones a los clientes** a través de sockets. Múltiples clientes pueden conectarse a un socket para ser notificados cuando se crea un nuevo bloque, una transacción u ocurre un determinado evento en la Blockchain para actuar en consecuencia.
 
 Esta interfaz es útil para desarrollar otro tipo de aplicaciones como Lightning Network que aprovecha esta característica para mantener su información actualizada con la red principal.
 
@@ -108,9 +108,9 @@ Entendiendo que por detrás del Bitcoin Core existen complejos mecanismos de con
 
 Los BIP, o Bitcoin Improvement Proposal, son documentos formales y estructurados para presentar mejoras al core de Bitcoin, ya sea mejoras técnicas, de organización, informativos o de otro tipo.
 
-Las propuestas son analizadas por la comunidad por detrás de Bitcoin para su refinamiento, aceptación o rechazo. Cualquier persona en el mundo puede [elaborar un BIP](https://github.com/bitcoin/bips) y el mismo será evaluado por la comunidad.
+Las propuestas son analizadas por la comunidad por detrás de Bitcoin para su refinamiento, aceptación o rechazo. Cualquier persona en el mundo puede [elaborar un BIP](https://github.com/bitcoin/bips "Elaborar un BIP") y el mismo será evaluado por la comunidad.
 
-Bitcoin no es la única tecnología que implementa este tipo de procesos para la evaluación de propuestas y mejoras de un software OpenSource. Tal vez conozcas los [EIP](https://ethereum.org/es/eips/) (Ethereum Improvement Proposal) que, si bien puede diferir en el proceso, tiene el mismo objetivo. Si salimos del mundo Blockchain, podemos encontrar el [TC39](https://tc39.es/) para las propuestas de mejora de Javascript.
+Bitcoin no es la única tecnología que implementa este tipo de procesos para la evaluación de propuestas y mejoras de un software OpenSource. Tal vez conozcas los [EIP](https://ethereum.org/es/eips/) (Ethereum Improvement Proposal) que, si bien puede diferir en el proceso, tiene el mismo objetivo. Si salimos del mundo Blockchain, podemos encontrar el [TC39](https://tc39.es/ "TC39") para las propuestas de mejora de Javascript.
 
 ### Cómo es el flujo BIP
 
@@ -145,4 +145,4 @@ El Bitcoin Core es la base de todo lo que hoy conocemos con el nombre de Blockch
 Sin duda es solo el inicio y Bitcoin aún tiene mucho por crecer y por darle al mundo Blockchain como principal referente en este ecosistema de tecnologías Web3.
 
 ---
-Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
+Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/ "Curso de Bitcoin de Platzi") de **Platzi**.
