--- a/src/content/bitcoin/overview.mdx
+++ b/src/content/bitcoin/overview.mdx
@@ -99,4 +99,4 @@ Existen cada vez más ecosistemas en el mundo relacionados con esta tecnología 
 Sin duda, la persona detrás de Satoshi Nakamoto pensó muy bien cómo crear toda una economía descentralizada y perdurable durante más de un siglo. Con conceptos innovadores tanto para la industria de la tecnología como para los economistas.
 
 ---
-Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
+Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/ "Curso de Bitcoin de Platzi") de **Platzi**.
