--- a/src/content/bitcoin/script.mdx
+++ b/src/content/bitcoin/script.mdx
@@ -31,7 +31,7 @@ Las Blockchains implementan diversos mecanismos para evitar este tipo de ataques
 
 ## Cómo es un Script en Bitcoin
 
-Los programas se escriben utilizando una serie de [OP_CODES](https://github.com/bitcoin/bitcoin/blob/v0.19.0/src/script/script.h#L46L187) (Código de Operación) definidos en la arquitectura de Bitcoin. Cada código posee una funcionalidad definida, ya sea de criptografía, aritmética, flujo de información, manejo lógico, etc. Los scripts se definen y se ejecutan de izquierda a derecha.
+Los programas se escriben utilizando una serie de [OP_CODES](https://github.com/bitcoin/bitcoin/blob/v0.19.0/src/script/script.h#L46L187 "Bitcoin OP_CODES") (Código de Operación) definidos en la arquitectura de Bitcoin. Cada código posee una funcionalidad definida, ya sea de criptografía, aritmética, flujo de información, manejo lógico, etc. Los scripts se definen y se ejecutan de izquierda a derecha.
 
 Un script para la transferencia de BTC entre dos cuentas luce de la siguiente manera:
 
@@ -47,9 +47,9 @@ El proceso por detrás de los scripts de Bitcoin poseen **una importante complej
 
 El lenguaje de programación de Bitcoin, **tiene su curva de aprendizaje como cualquier otro lenguaje**. Algunas características lo hacen algo más complicado y poco convencional de aprender, dado que es un lenguaje de muy bajo nivel y por ser Turing incompleto.
 
-Script es un lenguaje de programación que permite ejecutar funciones a través de una pila con ciertos datos y operandos denominados [OP_CODES](https://github.com/bitcoin/bitcoin/blob/master/src/script/script.h), además de la utilización de las llaves públicas y privadas para tener los permisos necesarios sobre los BTC.
+Script es un lenguaje de programación que permite ejecutar funciones a través de una pila con ciertos datos y operandos denominados [OP_CODES](https://github.com/bitcoin/bitcoin/blob/master/src/script/script.h "OP_CODES"), además de la utilización de las llaves públicas y privadas para tener los permisos necesarios sobre los BTC.
 
-Tal vez te sorprendas cuando sepas que el [white paper de Bitcoin](https://bitcoin.org/bitcoin.pdf), no hace mención alguna a Bitcoin Script. Si bien Satoshi Nakamoto lo creó desde la primera versión de esta Blockchain en su código fuente desde el 2009.
+Tal vez te sorprendas cuando sepas que el [white paper de Bitcoin](https://bitcoin.org/bitcoin.pdf "White paper de Bitcoin"), no hace mención alguna a Bitcoin Script. Si bien Satoshi Nakamoto lo creó desde la primera versión de esta Blockchain en su código fuente desde el 2009.
 
 El libro blanco de Bitcoin describe una transacción de la siguiente manera:
 
@@ -88,4 +88,4 @@ El lenguaje Bitcoin Script **ha ido solucionando bugs y evolucionado con los añ
 Ahora entiendes cómo funciona por detrás Bitcoin Script. Se trata de un lenguaje de programación poco convencional y algo más difícil de utilizar, ya que los desarrolladores estamos acostumbrados a los condicionales, ciclos de iteración, clases, etc.
 
 ---
-Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
+Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/ "Curso de Bitcoin de Platzi") de **Platzi**.
