--- a/src/content/bitcoin/transaction-fees.mdx
+++ b/src/content/bitcoin/transaction-fees.mdx
@@ -56,4 +56,4 @@ Muchos de los conceptos vistos aquí como el cálculo de las comisiones dependie
 Todos estos son conceptos a tener en cuenta si deseamos trabajar con Bitcoin y desarrollar nuestros propios programas para la transferencia de valor.
 
 ---
-Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
+Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/ "Curso de Bitcoin de Platzi") de **Platzi**.
