--- a/src/content/bitcoin/wallets-and-keys.mdx
+++ b/src/content/bitcoin/wallets-and-keys.mdx
@@ -73,9 +73,9 @@ Concretamente, se elimina el número `0` y la letra `O` (mayúscula), se elimina
 
 Las llaves públicas pueden representarse en dos formatos distintos.
 
-[Formato de llaves públicas](/images/bitcoin-public-keys.webp)
+![Formato de llaves públicas](/images/bitcoin-public-keys.webp)
 
-Los dos tipos son compatibles, tanto la llave pública comprimida como sin comprimir. Los algoritmos de curva elíptica [Secp256k1](https://es.bitcoin.it/wiki/Secp256k1) por detrás permiten esta compatibilidad. Claramente, la llave comprimida es mucho más amigable para el usuario y más utilizada en wallets.
+Los dos tipos son compatibles, tanto la llave pública comprimida como sin comprimir. Los algoritmos de curva elíptica [Secp256k1](https://es.bitcoin.it/wiki/Secp256k1 "Algoritmo Secp256k1") por detrás permiten esta compatibilidad. Claramente, la llave comprimida es mucho más amigable para el usuario y más utilizada en wallets.
 
 ## Billeteras o wallets
 
@@ -165,4 +165,4 @@ Si vas a guardar valor y grandes sumas de dinero en criptomonedas, busca la mejo
 El estudio de las Blockchain requiere una comprensión profunda de la criptografía, aunque no necesariamente implique programar algoritmos. Es fundamental conocer los estándares y características para su correcta aplicación en proyectos reales. Además, es crucial utilizar herramientas confiables y responsabilizarse por el manejo seguro de las claves privadas, adoptando prácticas seguras y conscientes para proteger nuestros activos.
 
 ---
-Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
+Post creado en colaboración con el [Curso de Bitcoin](https://platzi.com/cursos/bitcoin-developers/ "Curso de Bitcoin de Platzi") de **Platzi**.
