--- a/src/content/ethereum/erc20-token.mdx
+++ b/src/content/ethereum/erc20-token.mdx
@@ -16,7 +16,7 @@ Dentro del mundo de los tokens que rodean a Blockchain, tal vez el más conocido
 
 ## Características de los tokens
 
-El estándar para la creación de tokens es denominado [ERC20](https://ethereum.org/es/developers/docs/standards/tokens/erc-20/), proveniente de la propuesta [EIP20](https://eips.ethereum.org/EIPS/eip-20). La misma estandarizó una interfaz y características de cómo deben ser los tokens que viven en la Blockchain de Ethereum.
+El estándar para la creación de tokens es denominado [ERC20](https://ethereum.org/es/developers/docs/standards/tokens/erc-20/ "Tokens ERC20"), proveniente de la propuesta [EIP20](https://eips.ethereum.org/EIPS/eip-20 "EIP20"). La misma estandarizó una interfaz y características de cómo deben ser los tokens que viven en la Blockchain de Ethereum.
 
 Los tokens ERC20 tienen propiedades en común:
 
@@ -29,7 +29,7 @@ Otra característica importante para representar valor económico de los tokens 
 
 ## Implementación de tokens ERC20
 
-OpenZeppelin ofrece una [implementación del estandar ERC20](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/token/ERC20/ERC20.sol) auditada y segura que podemos utilizar para crear nuestros propios tokens.
+OpenZeppelin ofrece una [implementación del estandar ERC20](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/token/ERC20/ERC20.sol "Implementación del estandar ERC20") auditada y segura que podemos utilizar para crear nuestros propios tokens.
 
 Su utilización es muy simple, solo basta con importar y heredar el contrato y definir algunas propiedades de nuestro token.
 
@@ -55,4 +55,4 @@ A partir de implementación del contrato, podemos **construir la lógica de emis
 Si bien podemos utilizar la implementación del estándar ERC20 de OpenZeppelin, también es muy aconsejable estudiar cómo se realizan dichas implementaciones de las propuestas de mejora de Ethereum y, por qué no, animarnos a realizar nosotros mismos nuestra propia implementación.
 
 ---
-Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/) de **Platzi**.
+Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/ "Curso de OpenZeppelin de Platzi") de **Platzi**.
