--- a/src/content/ethereum/erc721-token.mdx
+++ b/src/content/ethereum/erc721-token.mdx
@@ -17,7 +17,7 @@ Los tokens provenientes del estándar ERC721 son los tan conocidos NFT. **Piezas
 
 ## Características de los tokens ERC721
 
-Encontrarás muchas similitudes entre el estándar [ERC721](https://ethereum.org/es/developers/docs/standards/tokens/erc-721/) y el ERC20. La principal diferencia entre ellos está dada en que los tokens emitidos bajo el estándar ERC721 poseen un `tokenId` para identificar de manera única al mismo.
+Encontrarás muchas similitudes entre el estándar [ERC721](https://ethereum.org/es/developers/docs/standards/tokens/erc-721/ "Tokens ERC721") y el ERC20. La principal diferencia entre ellos está dada en que los tokens emitidos bajo el estándar ERC721 poseen un `tokenId` para identificar de manera única al mismo.
 
 Esta característica convierte a los tokens en no fungibles, de ahí el término NFT o Non-Fungible Token. Piezas digitales no intercambiables entre sí, ya que pueden tener diferentes valores económicos o características.
 
@@ -25,9 +25,9 @@ Otra importante diferencia entre ambos tipos de tokens es que los ERC721 no son 
 
 ## Implementación de tokens ERC721
 
-Los tokens NFT fueron especificados en la propuesta [EIP721](https://eips.ethereum.org/EIPS/eip-721) que derivó en el estándar ERC721 y que define una interfaz y características de cómo deben ser los tokens no-fungibles que viven en la Blockchain de Ethereum.
+Los tokens NFT fueron especificados en la propuesta [EIP721](https://eips.ethereum.org/EIPS/eip-721 "EIP721") que derivó en el estándar ERC721 y que define una interfaz y características de cómo deben ser los tokens no-fungibles que viven en la Blockchain de Ethereum.
 
-A lo igual que con el estándar ERC20, OpenZeppelin tiene [su propia implementación del estándar ERC721](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/token/ERC721/ERC721.sol).
+A lo igual que con el estándar ERC20, OpenZeppelin tiene [su propia implementación del estándar ERC721](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/token/ERC721/ERC721.sol "Implementación del estándar ERC721").
 
 La implementación de dicho estándar es muy similar a la del ERC20:
 
@@ -56,4 +56,4 @@ Si tu contrato implementa de manera correcta el estándar ERC721, el mismo será
 El estándar ERC721 para la creación de NFT es, tal vez, uno de los casos de uso que más gente atrae al mundo crypto. Estudiarlo te permitirá ser competitivo en el mercado laboral y estarás listo para ser un gran desarrollador Web3.
 
 ---
-Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/) de **Platzi**.
+Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/ "Curso de OpenZeppelin de Platzi") de **Platzi**.
