--- a/src/content/openzeppelin/structure.mdx
+++ b/src/content/openzeppelin/structure.mdx
@@ -17,11 +17,11 @@ Manipular grandes cantidades de datos en un contrato inteligente puede volverse 
 
 ## Extención de Arrays y Mappings
 
-[OpenZeppelin nos ofrece dos utilidades](https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/utils/structs) para **extender el funcionamiento de los Array y de los Mappings**.
+[OpenZeppelin nos ofrece dos utilidades](https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/utils/structs "OpenZeppelin nos ofrece dos utilidades") para **extender el funcionamiento de los Array y de los Mappings**.
 
 Se trata de dos contratos inteligentes que nos permitirán recorrer estas estructuras de datos con más rapidez, localizar datos de forma más eficiente, borrarlos o incluso obtener la cantidad de los mismos.
 
-Estos son [EnumerableSet.sol](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/utils/structs/EnumerableSet.sol) y [EnumerableMap.sol](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/utils/structs/EnumerableMap.sol), tanto para Arrays como para Mappings respectivamente.
+Estos son [EnumerableSet.sol](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/utils/structs/EnumerableSet.sol "EnumerableSet.sol") y [EnumerableMap.sol](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/utils/structs/EnumerableMap.sol "EnumerableMap.sol"), tanto para Arrays como para Mappings respectivamente.
 
 Ambos se declaran de forma muy sencilla haciendo la importación correspondiente de la librería.
 
@@ -52,4 +52,4 @@ Tal vez no sea recomendable utilizar este tipo de librerías si tenemos que reso
 Si al momento de estar desarrollando el contrato detectas que necesitarás realizar operaciones complejas con este tipo de estructuras de datos, es momento de que entre en juego estas utilidades para simplificar nuestro trabajo.
 
 ---
-Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/) de **Platzi**.
+Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/ "Curso de OpenZeppelin de Platzi") de **Platzi**.
