--- a/src/content/solana/behind-solana.mdx
+++ b/src/content/solana/behind-solana.mdx
@@ -27,14 +27,14 @@ Al finalizar la lectura de todos los artículos, comprenderás el porqué de la 
 **Indice de artículos**
 
 - La Arquitectura Detrás De Solana
-- [Solana vs. Ethereum](/es/blog/solana/solana-vs-ethereum)
-- [Ecosistema Solana](/es/blog/solana/ecosystem)
-- [Proof of History (PoH)](/es/blog/solana/proof-of-history)
-- [Tower BFT](/es/blog/solana/tower-bft)
-- [Turbine](/es/blog/solana/turbine)
-- [Gulf Stream](/es/blog/solana/gulf-stream)
-- [Sealevel](/es/blog/solana/sealevel)
-- [Pipelining](/es/blog/solana/pipelining)
-- [Cloudbreack](/es/blog/solana/cloudbreak)
-- [Accounts & Archivers](/es/blog/solana/accounts-archivers)
-- [Resumen Funcionamiento Arquitectura](/es/blog/solana/wrap-up)
+- [Solana vs. Ethereum](/es/blog/solana/solana-vs-ethereum "Solana vs. Ethereum")
+- [Ecosistema Solana](/es/blog/solana/ecosystem "Ecosistema Solana")
+- [Proof of History (PoH)](/es/blog/solana/proof-of-history "Proof of History (PoH")
+- [Tower BFT](/es/blog/solana/tower-bft "Tower BFT")
+- [Turbine](/es/blog/solana/turbine "Turbine")
+- [Gulf Stream](/es/blog/solana/gulf-stream "Gulf Stream")
+- [Sealevel](/es/blog/solana/sealevel "Sealevel")
+- [Pipelining](/es/blog/solana/pipelining "Pipelining")
+- [Cloudbreak](/es/blog/solana/cloudbreak "Cloudbreak")
+- [Accounts & Archivers](/es/blog/solana/accounts-archivers "Accounts & Archivers")
+- [Resumen Funcionamiento Arquitectura](/es/blog/solana/wrap-up "Resumen Funcionamiento Arquitectura")
