--- a/src/content/solidity/global-variables.mdx
+++ b/src/content/solidity/global-variables.mdx
@@ -48,7 +48,7 @@ Es frecuente el uso de algunas variables globales de Solidity para “simular”
 
 Ninguna de las dos opciones es para nada aconsejable, ambas **pueden ser manipuladas y predichas** por los atacantes.
 
-Si una **acción crítica** de nuestro contrato depende de un valor aleatorio, debemos buscar alternativas off-chain como [Chainlink](https://docs.chain.link/). Este tipo de servicio se los conoce con el nombre de `Oráculos` para realizar procesamientos no deterministas fuera de la blockchain y reinsertar ese valor en el contrato cobrando una comisión.
+Si una **acción crítica** de nuestro contrato depende de un valor aleatorio, debemos buscar alternativas off-chain como [Chainlink](https://docs.chain.link/ "Chainlink"). Este tipo de servicio se los conoce con el nombre de `Oráculos` para realizar procesamientos no deterministas fuera de la blockchain y reinsertar ese valor en el contrato cobrando una comisión.
 
 La aleatoriedad en Blockchain es compleja y requiere de desafíos técnicos avanzados para proponer soluciones viables y seguras.
 
@@ -57,4 +57,4 @@ La aleatoriedad en Blockchain es compleja y requiere de desafíos técnicos avan
 Hemos visto como algunas variables globales en Solidity, como `msg.sender`, `tx.origin` o `block.timestamp` pueden darnos versatilidad en el desarrollo de nuestros contratos, pero pueden exponer vulnerabilidades no deseadas en el mismo.
 
 ---
-Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://platzi.com/cursos/seguridad-smart-contracts/) de **Platzi**.
+Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://platzi.com/cursos/seguridad-smart-contracts/ "Curso de Seguridad de Smart Contracts") de **Platzi**.
