--- a/src/content/solidity/good-practices.mdx
+++ b/src/content/solidity/good-practices.mdx
@@ -60,4 +60,4 @@ Entendiendo muy bien el flujo de transferencias y de recepción de **ETH** en la
 Desarrollar contratos inteligentes es muy exigente y estricto. Ethereum ofrece una gran guía para desarrolladores que te será de utilidad leerla como a tu libro favorito.
 
 ---
-Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://platzi.com/cursos/seguridad-smart-contracts/) de **Platzi**.
+Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://platzi.com/cursos/seguridad-smart-contracts/ "Curso de Seguridad de Smart Contracts") de **Platzi**.
