--- a/src/content/ethereum/erc1155-token.mdx
+++ b/src/content/ethereum/erc1155-token.mdx
@@ -22,7 +22,7 @@ Tanto el estándar ERC20 como el ERC721, son incompatibles entre sí. Solo permi
 
 ## Características de los tokens ERC1155
 
-El estándar [ERC1155](https://ethereum.org/es/developers/docs/standards/tokens/erc-1155/), propuesto en el [EIP1155](https://eips.ethereum.org/EIPS/eip-1155), define que un contrato inteligente puede tener **múltiples tokens a la vez**. Los mismos conviven en el mismo contrato y pueden actuar como tokens fungibles o no-fungibles según nuestra necesidad.
+El estándar [ERC1155](https://ethereum.org/es/developers/docs/standards/tokens/erc-1155/ "Tokens ERC1155"), propuesto en el [EIP1155](https://eips.ethereum.org/EIPS/eip-1155 "EIP1155"), define que un contrato inteligente puede tener **múltiples tokens a la vez**. Los mismos conviven en el mismo contrato y pueden actuar como tokens fungibles o no-fungibles según nuestra necesidad.
 
 Resuelve los problemas de seguridad del estándar ERC20 para **evitar la perdida de tokens** y se vuelve más amigable con la red que el estándar ERC721 al **permitir la emisión y transferencia de muchos tokens a la vez**.
 
@@ -64,4 +64,4 @@ El estándar ERC1155 permite solucionar casos de uso más avanzados donde múlti
 Solo se requiere que la imaginación vuele para encontrar los mejores usos tanto para el estándar ERC1155, como para el ERC20 y ERC721. Saber cuándo aplicar cada uno y desarrollar de la forma más eficiente nuestros contratos inteligentes y resolver variadas reglas de negocio.
 
 ---
-Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/) de **Platzi**.
+Post creado en colaboración con el [Curso de OpenZeppelin](https://platzi.com/cursos/openzeppelin/ "Curso de OpenZeppelin de Platzi") de **Platzi**.
