--- a/src/content/solidity/reentrancy-attack.mdx
+++ b/src/content/solidity/reentrancy-attack.mdx
@@ -25,7 +25,7 @@ Veamos de qué se trata esta vulnerabilidad y cómo prevenirla a través de un s
 
 Utilizaremos de ejemplo un contrato inteligente que permite depositar y retirar ETH. Cada dirección solo puede retirar sus propios fondos, pero la vulnerabilidad permitirá que un atacante se quede con todos los fondos.
 
-> **NOTA:** El ejemplo de esta vulnerabilidad fue tomado y adaptado originalmente de [Solidity by examples](https://solidity-by-example.org/hacks/re-entrancy/).
+> **NOTA:** El ejemplo de esta vulnerabilidad fue tomado y adaptado originalmente de [Solidity by examples](https://solidity-by-example.org/hacks/re-entrancy/ "Solidity by examples").
 
 ### Contratos involucrados
 
@@ -154,7 +154,7 @@ Corresponde setear a 0 el balance de la cuenta que retira sus fondos antes de re
 ```
 Siempre es aconsejable configurar el gas disponible para un llamado externo
 
-3. Otra forma de solucionar esta vulnerabilidad es con **un modificador que valide que la función no se esté llamando de forma recursiva**. Afortunadamente, [OpenZeppelin ya tiene un contrato auditado y seguro](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/security/ReentrancyGuard.sol) para solventar este problema.
+3. Otra forma de solucionar esta vulnerabilidad es con **un modificador que valide que la función no se esté llamando de forma recursiva**. Afortunadamente, [OpenZeppelin ya tiene un contrato auditado y seguro](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/security/ReentrancyGuard.sol "OpenZeppelin ya tiene un contrato auditado y seguro") para solventar este problema.
 
 ```js
 import "@openzeppelin/contracts/security/ReentrancyGuard.sol";
@@ -173,4 +173,4 @@ contract EtherStore is ReentrancyGuard {
 Has visto hasta aquí la exigencia de desarrollar un contrato inteligente que administre correctamente fondos. Un simple cambio de orden en la lógica de un contrato puede causar perdidas millonarias. Claro que ya las ha causado y, por este motivo, **Reentrancy** es una vulnerabilidad bien conocida que debes prevenir estudiando su funcionamiento y escribiendo código de forma segura.
 
 ---
-Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://platzi.com/cursos/seguridad-smart-contracts/) de **Platzi**.
+Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://platzi.com/cursos/seguridad-smart-contracts/ "Curso de Seguridad de Smart Contracts") de **Platzi**.
