--- a/src/content/solidity/good-practices.mdx
+++ b/src/content/solidity/good-practices.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Solidity: Buenas Prácticas'
 description: 'Hay algunas medidas que puedes aplicar para evitar problemas de seguridad en los contratos y no exponer vulnerabilidades al desarrollarlos.'
-image: '/tech/solidity.webp'
+image: '/tech/solidity.png'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Good Practices',
