--- a/src/content/solidity/cross-reentrancy-attack.mdx
+++ b/src/content/solidity/cross-reentrancy-attack.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Solidity: Ataque Reentrancy Cruzado'
 description: 'La vulnerabilidad conocida como Reetrancy permite llamar a una misma función una y otra vez. Existe una variante que provoca el llamado a una segunda función. Se lo conoce con el nombre de Reetrancy Cruzado.'
-image: '/tech/solidity.webp'
+image: '/tech/solidity.png'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Cross Reentrancy Attack',
