--- a/src/content/solidity/external-calls.mdx
+++ b/src/content/solidity/external-calls.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Solidity: Vulnerabilidades Con Llamadas Externas'
 description: 'Un contrato inteligente no solo puede recibir transacciones de un usuario, también puede ser otro contrato inteligente el que realice el llamado. Veamos vulnerabilidades que puede ser explotada si se hace mal uso de los llamados entre contratos.'
-image: '/tech/solidity.webp'
+image: '/tech/solidity.png'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Vulnerabilities With External Calls',
