--- a/src/content/solidity/global-variables.mdx
+++ b/src/content/solidity/global-variables.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Solidity: Vulnerabilidades Con Variables Globales'
 description: 'Las variables globales en Solidity son fundamentales en el desarrollo de smart contracts, pero pueden exponer graves vulnerabilidades si no se utilizan correctamente.'
-image: '/tech/solidity.webp'
+image: '/tech/solidity.png'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Vulnerabilities With Global Variables',
