--- a/src/content/solidity/storage.mdx
+++ b/src/content/solidity/storage.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Solidity: Vulnerabilidades De Almacenamiento'
 description: 'Los problemas de seguridad pueden estar relacionados con varios aspectos del desarrollo de contratos inteligentes. Uno de ellos es el tipo de variable para almacenar datos.'
-image: '/tech/solidity.webp'
+image: '/tech/solidity.png'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Storage vulnerabilities',
